# CMakeList.txt : CMake project for student_vaccination, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (student_vaccination "student_vaccination.cpp" "student_vaccination.h")

# TODO: Add tests and install targets if needed.
